# PMIS

./: HOSPITALITY_SYSTEM_DESIGN.md  MANIFEST.in  README.md  pyproject.toml  setup.py
apps/PMIS/: LICENSE  README.md  requirements.txt  setup.py
construction_pmis/: INSTALL.md  hooks.py  modules.txt  utils.py
construction_pmis/construction_pmis/: hooks.py  utils.py
construction_pmis/construction_pmis/workspace/: .gitkeep
construction_pmis/dashboard/construction_projects_dashboard/: construction_projects_dashboard.json
construction_pmis/dashboard_chart_source/: projects_by_status_chart_source.py  projects_nearing_deadline_chart_source.py
construction_pmis/doctype/: .gitkeep
construction_pmis/doctype/as_built_drawing/: as_built_drawing.json  as_built_drawing.py
construction_pmis/doctype/bill_of_quantities_item/: bill_of_quantities_item.json  bill_of_quantities_item.py
construction_pmis/doctype/checklist_template_item/: checklist_template_item.json
construction_pmis/doctype/commissioning_checklist/: commissioning_checklist.json  commissioning_checklist.py
construction_pmis/doctype/commissioning_checklist_item/: commissioning_checklist_item.json  commissioning_checklist_item.py
construction_pmis/doctype/contract_document/: contract_document.json  contract_document.py
construction_pmis/doctype/contract_document_link/: contract_document_link.json
construction_pmis/doctype/cost_estimate/: cost_estimate.py  (+1 more)
construction_pmis/module/: .gitkeep
construction_pmis/page/: .gitkeep
construction_pmis/report/: .gitkeep
construction_pmis/web_form/: .gitkeep
(+146 files in other folders)
