[project]
name = "construction_pmis"
authors = [
    { name = "Bereketeab Dev", email = "bereketeabdev@gmail.com" }
]
description = "Construction Project Management Information System for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    # "frappe~=14.0",
    # "erpnext~=14.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.app]
app_name = "construction_pmis"
app_title = "Construction PMIS"
app_publisher = "Bereketeab Dev"
app_description = "Construction Project Management Information System for ERPNext"
app_email = "bereketeabdev@gmail.com"
app_license = "MIT"
